namespace Zombies.Domain.Gear
{
    public interface IEquipment
    {
        string Name { get; }
    }
}